lab2/lab2_ws/log/build_2023-07-22_11-29-53/safety_node/stderr.log
  File "/root/F1Tenth-Labs/lab2/lab2_ws/install/safety_node/lib/python3.8/site-packages/safety_node/safety_node.py", line 19
    if len(r_dot_list) == 0):
                           ^
SyntaxError: unmatched ')'

